[gd_scene load_steps=2 format=3 uid="uid://b5k2mwvt7qpxe"]

[ext_resource type="Script" path="res://scripts/ui/WardenSelect.gd" id="1_warden"]

[node name="WardenSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_warden")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06, 0.05, 0.1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "Back"

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.7, 0.5, 1)
theme_override_font_sizes/font_size = 32
text = "Choose Your Warden"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="WardenContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="DifficultySection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DifficultyLabel" type="Label" parent="MarginContainer/VBoxContainer/DifficultySection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 18
text = "Danger Level"
horizontal_alignment = 1

[node name="DifficultySlider" type="HSlider" parent="MarginContainer/VBoxContainer/DifficultySection"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 4
min_value = 1.0
max_value = 5.0
step = 1.0
value = 1.0

[node name="DifficultyValue" type="Label" parent="MarginContainer/VBoxContainer/DifficultySection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.3, 1)
theme_override_font_sizes/font_size = 20
text = "1 - Normal"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
disabled = true
text = "Begin Run"

[node name="WardenPreview" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -400.0
offset_right = -20.0
offset_bottom = -100.0
grow_horizontal = 0
grow_vertical = 0

[node name="PreviewContent" type="VBoxContainer" parent="WardenPreview"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PreviewName" type="Label" parent="WardenPreview/PreviewContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Warden Name"
horizontal_alignment = 1

[node name="PreviewStats" type="Label" parent="WardenPreview/PreviewContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "HP: 60 | Armor: 0 | Energy: 3"
horizontal_alignment = 1

[node name="PreviewPassive" type="RichTextLabel" parent="WardenPreview/PreviewContent"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
bbcode_enabled = true
text = "[b]Passive:[/b] Description here"

[node name="PreviewDeck" type="Label" parent="WardenPreview/PreviewContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Starting Deck: 10 cards"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Header/BackButton" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/DifficultySection/DifficultySlider" to="." method="_on_difficulty_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_pressed"]


